fix: wrap markdown.css in @layer components to fix btn-regular-dark @apply error

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,4 +1,5 @@
-﻿.custom-md {
+﻿@layer components {
+.custom-md {
     h1 {
         @apply text-3xl;
     }
@@ -118,4 +119,5 @@
         margin: 1em 0;
     }
     
+}
 }
